[package]
name = "msg_interned_id"
version = "0.1.0"
edition = "2021"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Derive macro for generating interned string ID types with optional Bevy and serde integration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MolecularSadism/msg_interned_id"
readme = "README.md"
keywords = ["bevy", "ecs", "string", "interning", "id"]
categories = ["game-development", "data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
bevy = { version = "0.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
