[package]
name = "msg_interned_id"
version = "0.3.0"
edition = "2024"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Derive macro for generating interned string ID types with optional Bevy and serde integration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MolecularSadism/msg_interned_id"
readme = "README.md"
keywords = ["bevy", "ecs", "string", "interning", "id"]
categories = ["game-development", "data-structures"]

[features]
dev = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
# Use individual bevy sub-crates to avoid system dependencies (wayland, etc.)
bevy_ecs = "0.18"
bevy_reflect = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
